Scrollbar fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,25 +1,28 @@
-::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
 	background-color: #F5F5F5;
 	border-radius: 10px;
 }
-
-::-webkit-scrollbar {
+::-webkit-scrollbar
+{
 	width: 10px;
 	background-color: #F5F5F5;
 }
-
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb
+{
 	border-radius: 10px;
-	background-color: #FFF; /* This line may not be necessary as the background image will cover it */
-	background-image: linear-gradient(40% 0%, 75% 84%, #333333, #666666 60%, #000000);
-  }
-
+	background-color: #FFF;
+	background-image: -webkit-gradient(linear,
+                                   40% 0%,
+                                   75% 84%,
+                                   from(#333333),
+                                   to(#000000),
+                                   color-stop(.6,#666666));
+}
 .scroll-margin-top {
 	scroll-margin-top: 100px;
 }
-
-
 @keyframes borderAnimation {
 0% {
 	border-color: rgb(66, 4, 128);
